Using separate promise for each line

--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@
             <div id="scroll-spacer" class="scroll-spacer"></div>
         </div>
     </div>
-    <div id="data">Data: {{httpData()}}</div>
+    <!--<div id="data">Data: {{httpData()}}</div>-->
 </div>
 </body>
 </html>
