--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,8 @@
 
 <body>
 <div ng-keydown="keyPressed($event)">
-    <div>len: {{lines.length}} viewStart: {{lines[0].position}} viewScroll: {{viewScroll}} ({{viewUnwrappedScroll()}}) | cached: {{cacheSize}} fileSize: {{fileSize}} | {{viewStyle()}} </div>
+    <div>len: {{lines.length}} viewStart: {{lines[0].position}} viewScroll: {{viewScroll}} ({{viewUnwrappedScroll()}})
+         | cached: {{cacheSize()}} fileSize: {{fileSize()}} | {{viewStyle()}} </div>
     <input type="button" ng-click="moveView(1)" value="down"/>
     <input type="number" ng-model="viewHeight" ng-change="updateViewSize()"/>
     <input type="number" ng-model="viewWidth" ng-change="updateViewSize()"/>
