Moved server-side to a separate repository

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="src/cache.js"></script>
     <script src="src/view-controller.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
